[gd_scene load_steps=4 format=3 uid="uid://dod8dn7u8map2"]

[ext_resource type="Script" path="res://tools/resource_pack_editor/skin_editor/AnimatedTextureEditor.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://c2hrx8jtdohq2" path="res://tools/resource_pack_editor/skin_editor/AnimatedTextureFrameEditor.tscn" id="3"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.12549, 0.145098, 0.192157, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="VBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="HBoxContainer" parent="VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="FrameContainer" type="VBoxContainer" parent="VBoxContainer2/ScrollContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimatedTextureFrameEditor" parent="VBoxContainer2/ScrollContainer/PanelContainer/FrameContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="AnimatedTextureFrameEditor2" parent="VBoxContainer2/ScrollContainer/PanelContainer/FrameContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="AnimatedTextureFrameEditor3" parent="VBoxContainer2/ScrollContainer/PanelContainer/FrameContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="AnimatedTextureFrameEditor4" parent="VBoxContainer2/ScrollContainer/PanelContainer/FrameContainer" instance=ExtResource("3")]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_styles/panel = SubResource("1")

[node name="HBoxContainer" type="VBoxContainer" parent="VBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="PreviewTextureRect" type="TextureRect" parent="VBoxContainer2/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 6
